--- a/webapp/public/map.html
+++ b/webapp/public/map.html
@@ -34,7 +34,7 @@
         padding: 0;
       }
     </style>
-    <title>React App</title>
+    <title>Dawg Maps</title>
   </head>
   <body>    
     <div id="root"></div>
