--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -27,7 +27,9 @@
     <title>Dawg Maps</title>
   </head>
   <body>    
+    
     <div id="root"></div>
+    <body scroll="no" style="overflow: hidden"></body>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
